2006-10-24  Akim Demaille  <demaille@gostai.com>

	More OPENR vars
	* urbi-openr.m4 (OPEN_R_LDFLAGS): New.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	* svn-externals (url_aliases): Fix the computation of ext.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	* svn-externals: More aliases.
	Support recursive aliases.
	Support --dry-run.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	More doc
	* urbi-dirs.m4: More documentation.

2006-10-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Workaround for libtool's lake of support of -F on Darwin.
	* autotroll.m4 (QT_LIBS): Rewrite -F's as -Wl,-F's on Darwin because
	  as of today, libtool doesn't handle them correctly.

2006-10-22  Akim Demaille  <akim.demaille@free.fr>

	Let svn-externals support short options
	* svn-externals: Add support -U.

2006-10-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix typos.

	* README,
	* urbi-openr.m4,
	* umake.in: Typos.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Upgrades
	* urbi-prog-cxx.m4: Define PARSER_CXXFLAGS, although I don't
	know yet how to use this cleanly, since -O2 is actually included
	in the CXXFLAGS, and they appear last...
	* version.hh.in (PACKAGE_VERSION_REV): New.
	* urbi-openr.m4: Minor simplification.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Minor completion
	* urbi-openr.m4: Complete doc and fix spelling.

2006-10-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle Qt3.

	* autotroll.m4: Take QT_DIR into account. If the build fail, it might
	  be because QObject was introduced in Qt4. In this case, try again
	  with #include <qobject.h> instead. Depending on this test,
	  QT_VERSION_MAJOR is set to 3 or 4 and AC_SUBST'ed. This is not a
	  reliable way of knowing the real version of Qt though.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	More for Aibo.
	* urbi-dirs.m4: Define URBI_ENV_<ENV>.
	* urbi-openr.m4 (MKBIN, MK_FLAGS, STUBGEN, OPEN_R_CPPFLAGS):
	AC_SUBST them.
