@@ -1,5 +1,10 @@
 2006-10-24  Akim Demaille  <demaille@gostai.com>
 
+	URBI_FLOAT
+	* urbi-ufloat.m4: New.
+
+2006-10-24  Akim Demaille  <demaille@gostai.com>
+
 	More OPENR vars
 	* urbi-openr.m4 (OPEN_R_LDFLAGS): New.
 
